# bare-metal-led

./: .gitignore  CMakeLists.txt  README.md  arm-gcc-toolchain.cmake  clean.cmd  flash.ps1  linker.ld  main.cpp  make.ps1  startup.s
include/: irq.h  message.h  queue.h
src/: irq_arm.c  irq_arm.h  message.cpp  queue.cpp
src/app/: irq_arm.c  irq_host.c  main.cpp  queue.cpp
src/app/include/: irq.h  irq_arm.h  message.h  queue.h
src/drivers/: buttons.cpp  led_matrix.cpp
src/drivers/include/: buttons.h  led_matrix.h
src/platform/: nrf_gpio.cpp
src/platform/include/: nrf_gpio.h
tests/: test_queue.cpp
